Fix for flicker in ie, Showindevice property refactor

--- a/src/main/webapp/app/runtime/styles/css/wm-widgets.less
+++ b/src/main/webapp/app/runtime/styles/css/wm-widgets.less
@@ -470,6 +470,7 @@ html, body {
       border-radius: 4px;
       z-index: 10;
       pointer-events: none;
+      margin-left: 0;
       &.switch-handle {
         pointer-events: inherit;
         opacity: 0.3;
